Bugfix for Sun flickering after page transitions

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,37 +31,21 @@
 
 .sun-one-index {
     transform: translate(45%, 45%) scale(1);
-    /* animation: throb-index-one 8s cubic-bezier(0.2, 0.125, 0, 0.73) alternate infinite; */
+    animation: throb-index-one 8s cubic-bezier(0.2, 0.125, 0, 0.73) alternate infinite forwards;
 }
 
 .sun-two-index {
     transform: translate(90%, 20%) scale(1);
-    /* animation: throb-index-two 10s cubic-bezier(0.2, 0.125, 0, 0.73) alternate infinite; */
+    animation: throb-index-two 10s cubic-bezier(0.2, 0.125, 0, 0.73) alternate infinite forwards;
 }
 
 .sun-one-collection {
     transform: translate(-50%, -50%) scale(1);
-    /* animation: throb-collection-one 8s cubic-bezier(0.2, 0.125, 0, 0.73) alternate infinite; */
+    animation: throb-collection-one 8s cubic-bezier(0.2, 0.125, 0, 0.73) alternate infinite forwards;
 }
 
 .sun-two-collection {
     transform: translate(-20%, -20%) scale(1);
-    /* animation: throb-collection-two 10s cubic-bezier(0.2, 0.125, 0, 0.73) alternate infinite; */
-}
-
-.sun-one-index-anim {
-    animation: throb-index-one 8s cubic-bezier(0.2, 0.125, 0, 0.73) alternate infinite forwards;
-}
-
-.sun-two-index-anim {
-    animation: throb-index-two 10s cubic-bezier(0.2, 0.125, 0, 0.73) alternate infinite forwards;
-}
-
-.sun-one-collection-anim {
-    animation: throb-collection-one 8s cubic-bezier(0.2, 0.125, 0, 0.73) alternate infinite forwards;
-}
-
-.sun-two-collection-anim {
     animation: throb-collection-two 10s cubic-bezier(0.2, 0.125, 0, 0.73) alternate infinite forwards;
 }
 
@@ -94,40 +78,24 @@
 }
 
 @keyframes throb-index-one {
-    /* from {
-        transform: translate(45%, 45%) scale(1);
-    } */
-
     to {
         transform: translate(45%, 45%) scale(1.6);
     }
 }
 
 @keyframes throb-index-two {
-    /* from {
-        transform: translate(90%, 20%) scale(1);
-    } */
-
     to {
         transform: translate(90%, 20%) scale(1.3);
     }
 }
 
 @keyframes throb-collection-one {
-    /* from {
-        transform: translate(-50%, -50%) scale(1);
-    } */
-
     to {
         transform: translate(-50%, -50%) scale(1.6);
     }
 }
 
 @keyframes throb-collection-two {
-    /* from {
-        transform: translate(-20%, -20%) scale(1);
-    } */
-
     to {
         transform: translate(-20%, -20%) scale(1.3);
     }
